--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -42,6 +42,5 @@ jobs:
       - name: Push
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          branch: master
+          ssh: true
+          branch: ${{ github.head_ref}}
