--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -42,5 +42,6 @@ jobs:
       - name: Push
         uses: ad-m/github-push-action@master
         with:
-          ssh: true
-          branch: ${{ github.head_ref}}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          branch: master
