--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,8 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deployment.yaml
-- service.yaml
+- jarvis-deployment.yaml
+- jarvis-service.yaml
+- jarvis-default-networkpolicy.yaml
+- mysql-deployment.yaml
+- mysql-service.yaml
+- mysql-claim0-persistentvolumeclaim.yaml
 
 images:
 - name: jarvis
