--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -14,5 +14,6 @@ spec:
       targetPort: 3306
   selector:
     io.kompose.service: mysql
-status:
-  loadBalancer: {}
+    app: mysql
+  clusterIP: None
+
