--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -7,7 +7,8 @@ resources:
 - jarvis-default-networkpolicy.yaml
 - mysql-deployment.yaml
 - mysql-service.yaml
-- mysql-claim0-persistentvolumeclaim.yaml
+- mysql-pv.yaml
+- mysql-pvc.yaml
 
 images:
 - name: jarvis
