fix: update deployment config

--- a/k8s/jarvis-default-networkpolicy.yaml
+++ b/k8s/jarvis-default-networkpolicy.yaml
@@ -7,7 +7,11 @@ spec:
     - from:
         - podSelector:
             matchLabels:
-              io.kompose.network/jarvis-default: "true"
+              app: jarvis
+        - podSelector:
+            matchLabels:
+              app: mysql
   podSelector:
     matchLabels:
-      io.kompose.network/jarvis-default: "true"
+      app: jarvis
+
