--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -1,30 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.28.0 (HEAD)
-  labels:
-    io.kompose.service: mysql
   name: mysql
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: mysql
+      app: mysql
   strategy:
     type: Recreate
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert
-        kompose.version: 1.28.0 (HEAD)
       labels:
-        io.kompose.network/jarvis-default: "true"
-        io.kompose.service: mysql
+        app: mysql
     spec:
       containers:
-        - env:
+        - image: mysql:latest
+          name: mysql
+          env:
             - name: MYSQL_DATABASE
               value: jarvis
             - name: MYSQL_PASSWORD
@@ -33,8 +25,6 @@ spec:
               value: root
             - name: MYSQL_USER
               value: jarvis
-          image: mysql:latest
-          name: mysql
           ports:
             - containerPort: 3306
           resources:
