--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: jarvis-mysql
+  labels:
+    app: jarvis
 spec:
   ports:
     - name: "3306"
       port: 3306
       targetPort: 3306
   selector:
-    app: mysql
-
+    app: jarvis
+    tier: mysql
