fix: update deployment config

--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     app: jarvis
 spec:
+  type: ClusterIP
   ports:
-    - name: "3306"
-      port: 3306
+    - port: 3306
       targetPort: 3306
   selector:
     app: jarvis
