--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         tier: mysql
     spec:
       containers:
-        - image: mysql:latest
+        - image: mysql:5.7
           name: mysql
           env:
             - name: MYSQL_DATABASE
