--- a/k8s/mysql-pvc.yaml
+++ b/k8s/mysql-pvc.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
+  namespace: default
   labels:
     app: jarvis
 spec:
   accessModes:
     - ReadWriteOnce
+  storageClassName: manual
   resources:
     requests:
       storage: 5Gi
