--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -1,14 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jarvis-mysql
-  labels:
-    app: jarvis
+  name: mysql
 spec:
   type: ClusterIP
   ports:
-    - port: 3306
-      targetPort: 3306
+  - port: 3306
   selector:
-    app: jarvis
-    tier: mysql
+    app: mysql
+
