--- a/k8s/jarvis-deployment.yaml
+++ b/k8s/jarvis-deployment.yaml
@@ -1,16 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.28.0 (HEAD)
+  labels:
+    io.kompose.service: jarvis
   name: jarvis
 spec:
   replicas: 1
   selector:
     matchLabels:
       io.kompose.service: jarvis
+  strategy: {}
   template:
     metadata:
+      annotations:
+        kompose.cmd: kompose convert
+        kompose.version: 1.28.0 (HEAD)
       labels:
-        app: jarvis
+        io.kompose.network/jarvis-default: "true"
+        io.kompose.service: jarvis
     spec:
       containers:
         - image: jarvis
@@ -20,7 +30,10 @@ spec:
             - containerPort: 50051
           resources:
             limits:
-              memory: "128Mi"
-              cpu: "500m"
+              cpu: 500m
+              memory: 500Mi
+            requests:
+              cpu: 200m
+              memory: 200Mi
       restartPolicy: Always
 
