--- a/k8s/jarvis-service.yaml
+++ b/k8s/jarvis-service.yaml
@@ -1,8 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.28.0 (HEAD)
   labels:
-    app: jarvis
+    io.kompose.service: jarvis
   name: jarvis
 spec:
   ports:
@@ -13,5 +16,5 @@ spec:
       port: 50052
       targetPort: 50051
   selector:
-    app: jarvis
+    io.kompose.service: jarvis
 
