--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -1,35 +1,55 @@
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.28.0 (HEAD)
+  labels:
+    io.kompose.service: mysql
   name: mysql
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: mysql
+      io.kompose.service: mysql
   strategy:
     type: Recreate
   template:
     metadata:
+      annotations:
+        kompose.cmd: kompose convert
+        kompose.version: 1.28.0 (HEAD)
       labels:
-        app: mysql
+        io.kompose.network/jarvis-default: "true"
+        io.kompose.service: mysql
     spec:
       containers:
-      - image: mysql:5.6
-        name: mysql
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: root
-        ports:
-        - containerPort: 3306
+        - env:
+            - name: MYSQL_DATABASE
+              value: jarvis
+            - name: MYSQL_PASSWORD
+              value: root
+            - name: MYSQL_ROOT_PASSWORD
+              value: root
+            - name: MYSQL_USER
+              value: jarvis
+          image: mysql:latest
           name: mysql
-        volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
-        resources:
-          requests:
-            memory: "1024Mi"
-            cpu: "1500m"
+          ports:
+            - containerPort: 3306
+          resources:
+            requests:
+              cpu: 1500m
+              memory: 1024Mi
+            limits:
+              cpu: 2000m
+              memory: 2048Mi
+          volumeMounts:
+            - mountPath: /var/lib/mysql
+              name: mysql-claim0
+      restartPolicy: Always
       volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: mysql-pv-claim
+        - name: mysql-claim0
+          persistentVolumeClaim:
+            claimName: mysql-claim0
+
