--- a/k8s/mysql-pvc.yaml
+++ b/k8s/mysql-pvc.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  labels:
+    io.kompose.service: mysql-claim0
+  name: mysql-claim0
 spec:
-  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 10Gi
+
