--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -1,11 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.28.0 (HEAD)
+  labels:
+    io.kompose.service: mysql
   name: mysql
 spec:
-  type: ClusterIP
   ports:
-  - port: 3306
+    - name: "3306"
+      port: 3306
+      targetPort: 3306
   selector:
-    app: mysql
+    io.kompose.service: mysql
 
