--- a/k8s/jarvis-service.yaml
+++ b/k8s/jarvis-service.yaml
@@ -8,6 +8,7 @@ metadata:
     io.kompose.service: jarvis
   name: jarvis
 spec:
+  type: LoadBalancer
   ports:
     - name: "8081"
       port: 8081
