--- a/k8s/jarvis-service.yaml
+++ b/k8s/jarvis-service.yaml
@@ -9,6 +9,8 @@ metadata:
   name: jarvis
 spec:
   type: LoadBalancer
+  externalIPs:
+   - 172.29.0.0
   ports:
     - name: "8081"
       port: 8081
